# practices

./: .ycm_extra_conf.py  CMakeLists.txt  LICENSE  create_project.sh  setup.sh
lib/input_helper/: CMakeLists.txt
lib/input_helper/include/: input_helper.h
lib/input_helper/src/: input_helper.cpp
src/3n-plus-1/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/array/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/assign-cookie/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/autocomplete/: CMakeLists.txt  autocomplete.cpp
src/bad-version/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/baseball-game/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/coin-change/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/contains-duplicate/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/course-schedule/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/employee-importance/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/find-median/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/first-unique-in-string/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/fizzbuzz/: CMakeLists.txt  fizzbuzz.cpp  main.cpp  solution.cpp  test.cpp
src/gas-station/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/graph/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/guess-number/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/heaters/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/house-robber/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/interval/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/jolly-jumpers/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/linked-list/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/lru-cache/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/math/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/matrix/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/min-height-trees/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/minesweeper/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/n-ary-tree/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/number/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/poker-hands/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/power-of-n/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/random-set/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/relational-operator/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/reverse-string/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/reverse-vowel/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/shuffle-array/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/string/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/sum/: '  CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/sum-of-integer/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/tree/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/trie/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/unique-email/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/unique-path/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/walking-robot/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
src/word-ladder/: CMakeLists.txt  main.cpp  solution.cpp  test.cpp
template/: CMakeLists.txt.in  main.cpp.in  test.cpp.in
