cmake_minimum_required (VERSION 3.10)
project(practices)

enable_testing()
## Setup for GTest
add_subdirectory(lib/googletest EXCLUDE_FROM_ALL)

add_subdirectory(lib/input_helper EXCLUDE_FROM_ALL)

set(CMAKE_EXPORT_COMPILE_COMMANDS "ON")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_BINARY_DIR}/bin")

add_subdirectory(src/fizzbuzz)
add_subdirectory(src/autocomplete)
add_subdirectory(src/reverse-string)
add_subdirectory(src/reverse-vowel)
add_subdirectory(src/linked-list)
add_subdirectory(src/contains-duplicate)
add_subdirectory(src/first-unique-in-string)
add_subdirectory(src/power-of-n)
add_subdirectory(src/sum-of-integer)
add_subdirectory(src/number)
add_subdirectory(src/array)
add_subdirectory(src/string)
add_subdirectory(src/house-robber)
add_subdirectory(src/tree)
add_subdirectory(src/3n-plus-1)
add_subdirectory(src/sum)
add_subdirectory(src/shuffle-array)
add_subdirectory(src/relational-operator)
add_subdirectory(src/minesweeper)
add_subdirectory(src/jolly-jumpers)
add_subdirectory(src/unique-path)
add_subdirectory(src/matrix)
add_subdirectory(src/random-set)
add_subdirectory(src/poker-hands)
add_subdirectory(src/coin-change)
add_subdirectory(src/word-ladder)
add_subdirectory(src/trie)
add_subdirectory(src/course-schedule)
add_subdirectory(src/gas-station)
add_subdirectory(src/lru-cache)
add_subdirectory(src/n-ary-tree)
add_subdirectory(src/bad-version)
add_subdirectory(src/walking-robot)
add_subdirectory(src/math)
add_subdirectory(src/interval)
add_subdirectory(src/heaters)
add_subdirectory(src/find-median)
add_subdirectory(src/min-height-trees)
